--- a/Main.tex
+++ b/Main.tex
@@ -245,8 +245,8 @@
 \newcommand{\modres}[1]{\overset{#1}{\underset{\text{\tiny Res}}{\vdash}}}
 \newcommand{\moddpll}[1]{\overset{#1}{\underset{\text{\tiny DPLL}}{\vdash}}}
 
-
-
+\newcommand{\BD}[1]{\mathrm{BD}(#1)}
+\newcommand{\DMA}[2]{\mathrm{DMA}(#1,#2)}
 
 \begin{document}
 
