--- a/Hybridautomata.tex
+++ b/Hybridautomata.tex
@@ -27,6 +27,8 @@ The syntax of a hybrid automaton $H$ comprises of the following:
 Where $\freevar{P}$ is the set of free variables in the predicate $P$.
 \end{mydef}
 \medskip
+ 
+For example, when we define our train control system it is desired that the speed of the train is $0$, initially and that remains invariant throughout execution of the automaton $init(Stopped) := invar(Stopped) := Speed = 0$ , which is captured by the initial predicate $init(Stopped) := Speed = 0$. In the following specification events are used to pass messages between different automata placed in parallel. An example event is that of $event(Stopped \to Accelerating) :=MA.x.y \ \textbf{if} \ x = TrainID \ \textbf{then} \ EoA' := y$ which is triggered by the RBC and causes the train to update the value of its movement authority. flow conditions describe the rate of change of a given variable over time. In our formalisation of a train one such flow condition is $flow(Accelerating) := \dot{Speed} = 1$ which causes the train to accelerate at a speed of one unit per unit of time.
 
 
 \medskip
@@ -181,7 +183,7 @@ The behaviour of the train is based on two of Newtons laws of motion $v = u +at$
 ,where s = displacement,u = initial velocity, v = final velocity, a = acceleration and t = time. In order to model the behaviour of trains we make use of two functions, one to compute the braking distance at the current speed and the other to compute the distance from the train to the end of the movement authority. When the values computed by these two functions become equal the train should begin to brake in order to stop at the end of the movement authority. The simplest way to model deceleration would be to assume that the trains speed decreases at $-1$ unit of distance per unit of time. The second equation of motion  is used to caluate the breaking distance with $u = 0$ and $a = 1$ it can be rewritten to allow for the calculation of the breaking distance.
 \medskip
 
-\newcommand{\BD}[1]{\mathrm{BD}(#1)}
+
 \begin{mydef}[Breaking Distance]
 We define the breaking distance for a train in terms of its speed as follows:
 
@@ -191,7 +193,7 @@ $$\BD{S} = \frac{S^2}{2} $$
 \medskip
 Since we are working with a loop in the track the distance to the movement authority is calculated modulo the length of the track. 
 \medskip
-\newcommand{\DMA}[2]{\mathrm{DMA}(#1,#2)}
+
 \begin{mydef}[Distance to Movement Authority]
 
 The distance to the movement authority $\mathrm{DMA}$ is calulated from the distance and movement authority as followings:
