--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,7 +1,7 @@
  \thesischapter{Introduction}
 
 
-\section{Introduction}
+\section{Motivation}
 
 This thesis is concerned with the application of formal methods within the Railway Domain. Firstly we present a new approach to develop verified SAT solving algorithms and which have been applied the verification of a real world train control system: the solid state interlocking. Secondly we present an approach to formalise and model the European Rail Traffic Management System (ERTMS) and apply a model checker to verify the systems safety.
 
@@ -17,7 +17,7 @@ totality (or universality) of SAT solvers is an issue. For example, in the 2012 
 "Unknown" for certain inputs signifying that they could not deal with the given problem. 
 
 \textbf{Note: Add something about program extraction here.}
-
+Alternatively to automatic techniques for verification there are also interactive theorem provers which employ man-machine collaboration in order to prove properties over a system.
 Program extraction is another verification technique which allows the production of correct by construction computer programs. It is based around the Curry-Howard correspondence \cite{} which states that constructive proofs performed using the natural deduction calculus can be viewed as programs in the lambda calculus. 
 
 The Railway Verification Group at the Computer Science Department of Swansea University has been researching the development of formal methods for use in real world situations in particular for the development of train control systems. The majority of this work has been in the form of an industrial collaboration with our partner Siemens Rail Automation (UK). Siemens are continously modernising and improving their development processes and as a part of this are looking to use formal methods for the development of their systems. The Westrace interlocking is one such system that is being considered for treatment by formal methods. These interlockings have the benefits of being large but relatively uncomplex and every interlocking developed has to comply to the same range of safety requirements.  We have developed a Another product currently under development by Siemens Rail Automation is the European Rail Traffic Management System. This developed to a European  standard with each country or individual company producing their own implementation. Since the specification is loose and allows for a wide range for implementations this makes modelling of the system desireable to understand possible behaviours and to ensure safe integration with existing infrastructure.
@@ -26,8 +26,8 @@ The Railway Verification Group at the Computer Science Department of Swansea Uni
 
 
 
-\section{Aim}
-We have 2 sets of aims. The first set of aims is in regard to the development of verified SAT solving algorithms and their application to the verification of solid state railway interlocking programs: 
+\section{Results of the Thesis}
+We have 2 sets of results. The first set of results is in regard to the development of verified SAT solving algorithms and their application to the verification of solid state railway interlocking programs: 
 
 
 \medskip
@@ -46,7 +46,7 @@ We have 2 sets of aims. The first set of aims is in regard to the development of
 
 \end{itemize}
 
-Our second set of aims is in regard to the formal specification and verification of the European Rail Traffic Management System (ERTMS) using Real Time Maude.
+Our second set of results is in regard to the formal specification and verification of the European Rail Traffic Management System (ERTMS) using Real Time Maude.
 
 \begin{itemize}
 
